app/styles/pages/_purchases.scss
.all-transactions {
  margin-top: $page-padding;
}

$vendor-drawer-image-size: rem(195px);
$vendor-drawer-vertical-padding: rem(22px);
.vendor-drawer {
  &.hidden {
    display: none;
  }
  position: fixed;
  width: 100%;
  height: rem(230px);
  top: $header-height;
  background: white;
  display: flex;
  align-items: center;
  padding: $vendor-drawer-vertical-padding $page-padding*2/3;
  justify-content: space-between;
  /*border-bottom: 1px solid $border;*/
  box-shadow: 0px 0px rem(18px) rem(-5px) rgba(0,0,0,0.75);

  @media screen and (min-width: 750px) {
    border-width: rem(1px);
  }
  .primary {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 100%;
    h1 {
      margin: 0;
      text-align: left;
      line-height: 110%;
    }
    h3 {
      color: $text;
      text-transform: uppercase;
    }
    .light {
      text-transform: none;
    }
    .name-badge {
      display: flex;
      flex-direction: column;
      h1 {
        color: $street-sense-dark-grey;
      }
    }

    .badge-no, .button { 
      opacity: 1;
      transition: opacity 0.2s ease;
    }
    .button {
      width: rem(275px);
      margin: 0;
      font-size: rem(7pt);
      margin-top: rem(13px);
      padding: rem(2px);
    }
  }

  .image-container {
    display: block;
    margin: 0;
    width: $vendor-drawer-image-size;
    min-width: $vendor-drawer-image-size;
    height: $vendor-drawer-image-size;
    border-radius: 50%;
    /*border: rem(3px) solid $white;*/
    overflow: hidden;
    img {
      position: relative;
      
      width: 100%;
      height: 100%;
      object-fit: cover;
      object-position: top center;
    }
  }

  &.compact {
    height: rem(140px);
    .button { 
      opacity: 0; 
      display: none;
    }
    .name-badge {
      flex-direction: row;
    }
    .badge-no {
      margin-left: rem(20px);
    }
    .image-container {
      margin-top: rem(-15px);
      width: $vendor-drawer-image-size / 2.1;
      min-width: $vendor-drawer-image-size / 2.1;
      height: $vendor-drawer-image-size / 2.1;
    }
  }
}

.purchase {
  padding-top: $vendor-drawer-vertical-padding + $vendor-drawer-image-size;
}

.products {
  padding: 0 $page-padding;
  .product {
    margin: rem(68px) 0;
    display: flex;
    .product-image-container {
      min-width: rem(182px);
      width: rem(182px);
      margin-right: $page-padding;
      .product-image {
        height: auto;
        width: 100%;
        display: block;
      }
    }
    .product-info {
      flex-grow: 1;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      .name {
        text-transform: uppercase;
        .price {
          font-weight: normal;
        }
        h2 {
          color: $street-sense-dark-grey;
        }
      }
      .amount {
        color: $tan-dark;
        margin-top: rem(20px);
        display: flex;
        justify-content: space-between;
        align-items: flex-end;
        .item-amount {
          color: $blue-medium;
          width: 50%;
          display: flex;

          .button-plus {
            color: white;
            width: rem(74px);
            height: rem(74px);
            margin-right: rem(15px);
            border-radius: 100%;
            text-align: center;
            font-size: rem(20pt);
            text-indent: -9999px;
            background: $blue-medium url(images/purchase-add.svg) center center;
            background-size: cover;
          }
          .quantity {
            font-size: rem(26pt);
            font-weight: $light;
            line-height: rem(19pt);
            color: $street-sense-dark-grey;
      
          }
          &:active .button-plus {
            background-color: $blue-darker;
          }
          &:active .quantity {
            color: $blue-darker;
          }
        }
        .item-price {
          color: $tan-dark;
          display: flex;
          align-items: flex-end;
          margin-right: rem(60px);
          .total {
            font-size: rem(10pt);
            line-height: 73%;
            font-weight: $semibold;
            color: $street-sense-dark-grey;
          }
          .minus-container {
            padding: rem(25px);
            margin-bottom: -1*rem(25px);
            margin-right: -1*rem(25px);
          }
          .button-minus {
            color: white;
            width: rem(35px);
            height: rem(35px);
            border-radius: 100%;
            text-align: center;
            font-size: rem(8pt);
            text-indent: -9999px;
            background: $blue-darker url(images/purchase-remove.svg) center center no-repeat;
            background-size: cover;
          }
          .minus-container:active .button-minus {
            background-color: $blue-medium;
          }
        }
      }
    }

    &.active {
      .product-info .amount .item-amount {
        color: $blue-darker;
      }
      .product-info .amount .item-price {
        color: $blue-darker;
        margin-right: 0;
      }
    }
  }

  .product-tip {
    .name {
      color: $text;
      font-size: rem(6pt);
      font-weight: $semibold;
      line-height: 70%;
    }
    .button-tip {
      color: $blue-medium;
      font-size: rem(12pt);
      font-weight: $light;
      letter-spacing: rem(-7px);
      text-align: center;
      margin-right: rem(15px);
      padding-top: rem(28px);
      padding-right: rem(10px);
      min-width: rem(100px);
      height: rem(100px);
      border-radius: rem(50px);
      background-color: white;
      border: rem(3px) solid $blue-medium;
      &:active {
        background-color: $blue-medium;
        border: rem(3px) solid $blue-medium;
        color: white;
      }
    }
  }
}

.transaction-fee {
  border-top: rem(4px) solid $street-sense-light-grey;
  margin: 0 $page-padding;
  padding: rem(25px) 0 rem(0px);
  display: flex;
  justify-content: space-between;
  font-size: rem(10pt);
  color: $street-sense-dark-grey;
  .amount {
    font-weight: $semibold;
    margin-right: rem(35px + 25px);
  }
}

.total-payable {
  color: $street-sense-dark-grey;
  margin: 0 $page-padding;
  padding: rem(35px) 0 rem(32px);
  margin-top: rem(15px);
  border-bottom: rem(4px) solid $street-sense-light-grey;
  font-size: rem(14pt);
  display: flex;

  .title {
    flex-grow: 1;
    // margin-right: rem(75px);
    // margin-left: rem(40px);
  }
  .amount {
    font-weight: $semibold;
    text-align: right;
    min-width: rem(310px);
    padding-right: rem(35px + 25px);
  }
}
.purchase-pay {
  display: flex;
  margin-top: rem(50px);
  padding: 0 $page-padding $page-padding;
  .flash-message {
    text-align: center;
    margin-bottom: rem(40px);
  }
  .notice {
    font-size: rem(7pt);
    color: $blue-darker;
    text-align: center;
    margin: rem(30px) 0;
  }
  .button, button {
    font-size: rem(30px);
    margin-left: rem(10px);
    &:first-child {
      margin-left: rem(0px);
    }
  }
}
.purchases-success {
  .container { padding: 0; }
}
.purchase-success {
  user-select: none;
  -webkit-touch-callout: none;
  height: 100%;
  display: flex;
  flex-direction: column;
  .half {
    display: flex;
    flex-direction: column;
    align-content: center;
    transition: 0.25s ease-in background;
    h1, h2, h3, .left .total { transition: 0.25s ease-in color; }
    &.all-good {
      background: #DDFDDC;
      // h1, h2, h3, .left .total { color: white; }
    }
  }
  .button {
    opacity: 0;
    pointer-events: none;
    transition: 0.25s ease-in background, 0.25s ease-in border-color;
    overflow: hidden;
    position: relative;
    &:focus, &:active {
      background: $blue-medium;
      color: $white;
      text-shadow: 0 rem(2px) $shadow;
    }
    &.show {
      opacity: 1;
      pointer-events: initial;
    }
    .initial, .complete {
      // padding: rem(18px) 0;
      display: block;
      transition: 0.25s ease-in transform, 0.25s ease-in opacity;
    }
    .initial {
      display: block;
    }
    .complete {
      position: absolute;
      top: rem(22px);
      bottom: rem(22px);
      left: 0;
      right: 0;
      width: 100%;
      transform: translateY(200%);
      opacity: 0;
      text-indent: rem(-9999px);
      background: url(images/checkmark.svg);
      background-size: contain;
      background-position: center center;
      background-repeat: no-repeat;
      // display: none;
    }
  }
  .all-good .button {
    background: #4BD04B;
    border-color: #4BD04B;
    // text-indent: rem(-9999px);
    overflow: hidden;
    .initial {
      // display: none;
      transform: translateY(-200%);
      opacity: 0;
    }
    .complete {
      transform: translateY(0%);
      opacity: 1;
    }
  }
  .vendor {
    min-height: 60vh;
    padding: 0 $page-padding;
    // padding-top: rem(30px);
    /*background: #efefef;*/
    transform: rotate(180deg);
    justify-content: center;
    .split {
      display: flex;
    }
    h1 {
      margin-top: rem(10px);
    }
    .left {
      min-width: 10vw;
      .total {
        color: $blue-darker;
        font-weight: $light;
        font-size: rem(20pt);
        line-height: 100%;
        // margin: rem(40px) 0 0;
      }
      .payed {
        position: relative;
        padding-top: rem(60px);
        &:after {
          position: absolute;
          content: '';
          display: block;
          // width: rem(119px);
          width: 100%;
          height: rem(90px);
          background: url(images/success-arrow.svg) center center no-repeat;
          background-size: contain;
          top: 0;
        }
      }
      .image-container {
        display: block;
        margin: 0 auto;
        width: rem(200px);
        height: rem(200px);
        border-radius: 50%;
        border: rem(3px) solid $white;
        box-shadow: 0 rem(3px) rem(5px) $shadow;
        overflow: hidden;
        position: relative;
      }

      .image {
        width: 100%;
        height: auto;
      }
    }
    .right {
      display: flex;
      flex-direction: column;
      justify-content: center;

      padding-left: rem(60px);
      // line-height: 110%;
      flex-grow: 1;
      h3 {
        font-size: rem(12pt);
        line-height: 110%;
        font-weight: normal;
        margin-bottom: rem(0px);
      }
      h2 {
        font-weight: normal;
        font-size: rem(16pt);
        line-height: 115%;

      }
      // min-width: 66%;
    }
    .button {
      margin-top: rem(60px);
    }
  }
  .customer {
    min-height: 40vh;
    padding: rem(50px) $page-padding;
    justify-content: center;
    color: white;
    background: $blue-medium;
    .thank-you {
      width: rem(570px*0.75);
      height: rem(165px*0.75);
      background: url(images/thank-you.svg) center center no-repeat;
      background-size: contain;
      margin: 0 auto rem(30px);
      text-indent: -9999px;
    }
    .customer-description {
      h1 {
        color: white;
        margin-top: 0;
        margin-bottom: rem(45px);
      }
      p {
        margin-top: rem(25px);
        margin-bottom: 0;
        font-size: rem(11pt);
        line-height: 120%;
        text-align: center;
      }
      // margin-top: rem(80px);
      // font-size: rem(14pt);
      // line-height: 110%;
    }
    .customer-thank-you {
      display: none;
    }
    .button {
      // margin-top: rem(40px);
    }
    &.vendor-all-good {
      justify-content: flex-start;
      background: white;
      &.all-good {
        background: #DDFDDC;
      }
      .customer-description {
        display: none;
      }
      .customer-thank-you {
        display: block;
      }
    }
  }
}

.slider-container {
  margin-top: rem(100px);
}

